# SimpleGL

./: CMakeLists.txt  GETTING_STARTED.md  README.md  annotated.html  application_8h_source.html  applicationprivate_8h_source.html  classes.html  classsimplegl_1_1Application-members.html  classsimplegl_1_1Application.html  classsimplegl_1_1ApplicationPrivate-members.html  classsimplegl_1_1ApplicationPrivate.html  classsimplegl_1_1PointSet-members.html  classsimplegl_1_1PointSet.html  classsimplegl_1_1PointSetRenderer-members.html  classsimplegl_1_1PointSetRenderer.html  classsimplegl_1_1PointSetRendererPrivate-members.html  classsimplegl_1_1PointSetRendererPrivate.html  classsimplegl_1_1RenderObject-members.html  classsimplegl_1_1RenderObject.html  classsimplegl_1_1Renderer-members.html  classsimplegl_1_1Renderer.html  classsimplegl_1_1Renderer__coll__graph.md5  classsimplegl_1_1SceneObject-members.html  classsimplegl_1_1SceneObject.html  classsimplegl_1_1SimpleGL-members.html  classsimplegl_1_1SimpleGL.html  classsimplegl_1_1Window-members.html  classsimplegl_1_1Window.html  classsimplegl_1_1WindowPrivate-members.html  classsimplegl_1_1WindowPrivate.html  dir_137bc73779398ee48a8d24e2ae8f13e2.html  dir_2ced4f2f4752946dbd69d40eab86598c.html  dir_9139a11bd328bd3e81e5e81ffd465942.html  dir_debe5974059fc579a3b9a1791a448d79.html  examples.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  (+14 more)
.github/workflows/: cmake.yml
apps/viewer/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt
html/: annotated.html  application_8h_source.html  applicationprivate_8h_source.html  classes.html  classsimplegl_1_1Application-members.html  classsimplegl_1_1Application.html  classsimplegl_1_1ApplicationPrivate.html  classsimplegl_1_1PointSet.html  classsimplegl_1_1PointSetRenderer.html  classsimplegl_1_1PointSetRendererPrivate-members.html  classsimplegl_1_1RenderObject-members.html  classsimplegl_1_1RenderObject.html  classsimplegl_1_1Renderer.html  classsimplegl_1_1Renderer__coll__graph.map  classsimplegl_1_1SceneObject-members.html  classsimplegl_1_1SimpleGL-members.html  classsimplegl_1_1Window.html  classsimplegl_1_1WindowPrivate.html  dir_2ced4f2f4752946dbd69d40eab86598c.html  dir_debe5974059fc579a3b9a1791a448d79.html  examples.html  files.html  functions.html  functions_vars.html  index.html  pointsetrendererprivate_8h_source.html  renderer_8h_source.html  sceneobject_8h_source.html  simplegl_8h_source.html  simplegl__global_8h_source.html  window_8h_source.html  windowprivate_8h_source.html
html/search/: all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  searchdata.js  variables_0.js
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  pages_0.js  searchdata.js  variables_0.js
simplegl/: CMakeLists.txt
simplegl/doc/: Doxyfile
simplegl/include/: simplegl_global.h
simplegl/include/simplegl/: application.h  pointset.h  pointsetrenderer.h  renderer.h  renderobject.h  sceneobject.h  simplegl.h  window.h
simplegl/include/simplegl/private/: applicationprivate.h  pointsetrendererprivate.h  windowprivate.h
simplegl/src/: application.cpp  applicationprivate.cpp  pointset.cpp  pointsetrenderer.cpp  pointsetrendererprivate.cpp  renderobject.cpp  sceneobject.cpp  simplegl.cpp  window.cpp  windowprivate.cpp
simplegl/test/: CMakeLists.txt  applicationtest.cpp  applicationtest.h
